Fixes ClientSecretBasic test